# nvim-oxi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: autocmd.rs  buffer.rs  command.rs  deprecated.rs  error.rs  extmark.rs  global.rs  lib.rs  options.rs  serde_utils.rs  tabpage.rs  trait_utils.rs  utils.rs  vim.rs  vimscript.rs  win_config.rs  window.rs
crates/api/src/ffi/: autocmd.rs  buffer.rs  command.rs  deprecated.rs  extmark.rs  global.rs  helpers.rs  mod.rs  options.rs  tabpage.rs  vim.rs  vimscript.rs  win_config.rs  window.rs
crates/api/src/opts/: buf_attach.rs  buf_delete.rs  clear_autocmds.rs  cmd.rs  create_augroup.rs  create_autocmd.rs  create_command.rs  decoration_provider.rs  echo.rs  eval_statusline.rs  exec.rs  exec_autocmds.rs  get_autocmds.rs  get_commands.rs  get_context.rs  get_extmark_by_id.rs  get_extmarks.rs  get_highlight.rs  get_mark.rs  get_namespace.rs  get_option_value.rs  get_text.rs  mod.rs  notify.rs  open_term.rs  option.rs  parse_cmd.rs  select_popup_menu_item.rs  set_extmark.rs  set_highlight.rs  set_keymap.rs  set_mark.rs  win_text_height.rs
crates/api/src/types/: autocmd_callback_args.rs  autocmd_infos.rs  channel_infos.rs  client_infos.rs  cmd_infos.rs  cmd_magic.rs  cmd_range.rs  command_addr.rs  command_args.rs  command_complete.rs  command_infos.rs  command_modifiers.rs  command_nargs.rs  command_range.rs  context_type.rs  echo_message_id.rs  editor_context.rs  extmark_hl_mode.rs  extmark_infos.rs  extmark_position.rs  extmark_virt_text_chunk.rs  extmark_virt_text_position.rs  get_extmarks_namespace_id.rs  get_hl_infos.rs  got_mode.rs  highlight_infos.rs  keymap_infos.rs  mod.rs  mode.rs  mouse_action.rs  mouse_button.rs  one_or_more.rs  option_infos.rs  parsed_viml_expression.rs  paste_phase.rs  proc_infos.rs  progress_message_status.rs  register_type.rs  split_direction.rs  statusline_infos.rs  (+12 more)
crates/libuv/: Cargo.toml
crates/libuv-bindings/: Cargo.toml
crates/libuv-bindings/src/: async.rs  error.rs  handle.rs  lib.rs  loop.rs  timer.rs
crates/libuv/src/: async.rs  ffi.rs  handle.rs  lib.rs  loop.rs  timer.rs
crates/luajit/: Cargo.toml
crates/luajit/src/: error.rs  ffi.rs  function.rs  into_result.rs  lib.rs  macros.rs  poppable.rs  pushable.rs  state.rs  utils.rs
crates/macros/: Cargo.toml
crates/macros/src/: common.rs  derive_opts.rs  lib.rs  module.rs  plugin.rs  test.rs
crates/nvim-api/: Cargo.toml
crates/nvim-api/src/: autocmd.rs  buffer.rs  error.rs  extmark.rs  global.rs  lib.rs  tabpage.rs  trait_utils.rs  utils.rs  vimscript.rs  win_config.rs  window.rs
crates/nvim-api/src/ffi/: autocmd.rs  buffer.rs  extmark.rs  global.rs  tabpage.rs  vimscript.rs  win_config.rs  window.rs
crates/nvim-api/src/opts/: buf_attach.rs  buf_delete.rs  clear_autocmds.rs  cmd.rs  create_augroup.rs  create_autocmd.rs  create_command.rs  decoration_provider.rs  eval_statusline.rs  exec_autocmds.rs  get_autocmds.rs  get_commands.rs  get_context.rs  get_extmark_by_id.rs  get_extmarks.rs  get_mark.rs  get_option_value.rs  get_text.rs  mod.rs  notify.rs  open_term.rs  parse_cmd.rs  select_popup_menu_item.rs  set_extmark.rs  set_highlight.rs  set_keymap.rs
crates/nvim-api/src/types/: autocmd_callback_args.rs  autocmd_infos.rs  channel_infos.rs  cmd_infos.rs  cmd_magic.rs  cmd_range.rs  command_addr.rs  command_args.rs  command_complete.rs  command_infos.rs  command_modifiers.rs  command_nargs.rs  command_range.rs  context_type.rs  editor_context.rs  extmark_infos.rs  got_mode.rs  keymap_infos.rs  (+17 more)
crates/nvim-oxi/: Cargo.toml  build.rs
crates/nvim-oxi/src/: entrypoint.rs  error.rs  lib.rs  toplevel.rs
crates/nvim-types/: Cargo.toml
crates/nvim-types/src/: arena.rs  array.rs  collection.rs  conversion.rs  dictionary.rs  error.rs  from_object.rs  function.rs  kvec.rs  lib.rs  non_owning.rs  object.rs  str.rs  string.rs  to_object.rs
crates/oxi-api/: Cargo.toml
crates/oxi-api/src/: autocmd.rs  buffer.rs  error.rs  extmark.rs  global.rs  tabpage.rs  trait_utils.rs  utils.rs  vimscript.rs  win_config.rs  window.rs
crates/oxi-diagnostic/: Cargo.toml
crates/oxi-diagnostic/src/: diagnostic.rs  lib.rs
crates/oxi-libuv/: Cargo.toml
crates/oxi-libuv/src/: async.rs  handle.rs  lib.rs  loop.rs
crates/oxi-macros/: Cargo.toml
crates/oxi-macros/src/: derive_opts.rs  lib.rs
crates/oxi-test/: Cargo.toml
crates/oxi-test/src/: lib.rs
crates/oxi-types/: Cargo.toml
crates/oxi-types/src/: array.rs  dictionary.rs  error.rs  function.rs  lib.rs  object.rs  string.rs
crates/oximlua/: Cargo.toml
crates/oximlua/src/: core.rs  into_result.rs  lib.rs  macros.rs  utils.rs  wrap_fn.rs
crates/types/: Cargo.toml
crates/types/src/: arena.rs  array.rs  conversion.rs  dictionary.rs  error.rs  function.rs  function_oximlua.rs  kvec.rs  lib.rs  macros.rs  non_owning.rs  object.rs  str.rs  string.rs  string_builder.rs
examples/async-apples/: .gitignore  Cargo.toml  README.md
examples/async-apples/src/: lib.rs
nvim-oxi/: Cargo.toml
nvim-oxi/src/: entrypoint.rs  error.rs  lib.rs  libuv.rs  macros.rs  toplevel.rs  trait_utils.rs
nvim-oxi/src/api/: api_call.rs  autocmd.rs  buffer.rs  extmark.rs  global.rs  mod.rs  tabpage.rs  vimscript.rs  win_config.rs  window.rs
nvim-oxi/src/libuv/: async.rs  loop.rs  mod.rs  timer.rs
nvim-oxi/src/loop/: async.rs  error.rs  loop.rs  mod.rs
nvim-oxi/src/lua/: ffi.rs  fun.rs  lua.rs  lua_fn.rs  lua_fun.rs  luafun.rs  luaref.rs  mod.rs  poppable.rs  pushable.rs
nvim-oxi/src/object/: de.rs  from_object.rs  mod.rs  ser.rs  to_object.rs
nvim-oxi/src/toplevel/: mod.rs  toplevel.rs
oxi-derive/: Cargo.toml
oxi-derive/src/: lib.rs
oxi-derive/tests/: 01-parse.rs  test.rs
oxi-module/: Cargo.toml
oxi-module/src/: lib.rs
tests/: Cargo.toml  build.rs
tests/.cargo/: config
tests/src/: lib.rs  macro.rs  mlua.rs
tests/src/api/: autocmd.rs  buffer.rs  command.rs  extmark.rs  global.rs  mod.rs  tabpage.rs  vimscript.rs  win_config.rs  window.rs
tests/src/libuv/: async_handle.rs  mod.rs  timer_handle.rs
(+351 files in other folders)
