[workspace]
members = ["crates/*", "examples/*", "tests"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
authors = ["Riccardo Mazzarini <me@noib3.dev>"]
rust-version = "1.85"
description = "Rust bindings to all things Neovim"
documentation = "https://docs.rs/nvim-oxi"
readme = "./README.md"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"
keywords = ["bindings", "neovim", "nvim"]

[workspace.dependencies]
api = { path = "./crates/api", package = "nvim-oxi-api" }
libuv = { path = "./crates/libuv", package = "nvim-oxi-libuv" }
luajit = { path = "./crates/luajit", package = "nvim-oxi-luajit" }
macros = { path = "./crates/macros", package = "nvim-oxi-macros" }
types = { path = "./crates/types", package = "nvim-oxi-types" }

thiserror = "2.0"

[workspace.lints.clippy]
mixed_attributes_style = "allow"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "allow"

[package]
name = "nvim-oxi"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
features = ["neovim-nightly", "libuv", "mlua", "test", "__vendored_luajit"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
neovim-0-10 = ["api/neovim-0-10"]
neovim-0-11 = ["api/neovim-0-10", "api/neovim-0-11"]
neovim-nightly = ["neovim-0-11", "api/neovim-nightly"]

libuv = ["dep:libuv"]
mlua = ["dep:mlua"]
test = ["macros/test", "dep:cargo_metadata"]
test-terminator = ["test", "libuv", "macros/test-terminator"]
__vendored_luajit = ["mlua/vendored"]

[dependencies]
api = { workspace = true }
luajit = { workspace = true }
macros = { workspace = true, features = ["plugin"] }
types = { workspace = true, features = ["serde"] }
libuv = { workspace = true, optional = true }

thiserror = { workspace = true }
cargo_metadata = { version = "0.20", optional = true }
mlua = { version = "0.10", features = ["luajit"], optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "api"
path = "./examples/api.rs"
crate-type = ["cdylib"]

[[example]]
name = "calc"
path = "./examples/calc.rs"
crate-type = ["cdylib"]

[[example]]
name = "libuv"
path = "./examples/libuv.rs"
crate-type = ["cdylib"]
required-features = ["libuv"]

[[example]]
name = "mechanic"
path = "./examples/mechanic.rs"
crate-type = ["cdylib"]

[[example]]
name = "mlua"
path = "./examples/mlua.rs"
crate-type = ["cdylib"]
required-features = ["mlua"]
