[package]
name = "nvim-oxi"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
description = "Rust bindings to all things Neovim."
documentation = "https://docs.rs/nvim-oxi"
readme = "../README.md"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"
keywords = ["bindings", "neovim", "nvim"]

[package.metadata.docs.rs]
features = ["nightly", "test"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
nightly = []
test = ["dep:oxi-test"]

[dependencies]
derive_builder = "0.11"
libc = "0.2"
nvim-types = { path = "../nvim-types", features = ["serde"] }
once_cell = "1.12"
oxi-module = { path = "../oxi-module" }
oxi-test = { path = "../oxi-test", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0"
