[package]
name = "nvim-oxi"
version = "0.1.3"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
rust-version = "1.62"
description = "Rust bindings to all things Neovim."
documentation = "https://docs.rs/nvim_oxi"
readme = "../README.md"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"
keywords = ["bindings", "neovim", "nvim"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
nightly = []
test = ["dep:oxi-test"]

[dependencies]
derive_builder = "0.11"
libc = "0.2"
nvim-types = { version = "0.1", path = "../nvim-types", features = ["serde"] }
once_cell = "1.12"
oxi-module = { version = "0.1", path = "../oxi-module" }
oxi-test = { version = "0.1", path = "../oxi-test", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0"
