[package]
name = "nvim-oxi"
version = "0.1.3"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
rust-version = "1.62"
description = "Rust bindings to all things Neovim."
documentation = "https://docs.rs/nvim_oxi"
readme = "../README.md"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"
keywords = ["bindings", "neovim", "nvim"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
libuv = ["nvim-libuv"]
mlua = ["dep:mlua"]
nightly = ["nvim-types/nightly"]
test = ["oxi-test"]

[dependencies]
nvim-libuv = { version = "0.1", path = "../nvim-libuv", optional = true }
nvim-types = { version = "0.1", path = "../nvim-types", features = ["serde"] }
oxi-module = { version = "0.1", path = "../oxi-module" }
oxi-test = { version = "0.1", path = "../oxi-test", optional = true }

derive_builder = "0.11"
mlua = { version = "0.8", optional = true }
once_cell = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "libuv"
path = "../examples/libuv.rs"
crate-type = ["cdylib"]
required-features = ["libuv"]
