[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["neovim-0-9"]
neovim-0-9 = ["nvim-oxi/neovim-0-9"]
neovim-0-10 = ["neovim-0-9", "nvim-oxi/neovim-0-10"]
neovim-nightly = ["neovim-0-10", "nvim-oxi/neovim-nightly"]

[target.'cfg(not(any(target_os = "windows", target_env = "msvc")))'.dependencies]
all_asserts = "2.3"
nvim-oxi = { path = "..", features = ["libuv", "test"] }

[target.'cfg(any(target_os = "windows", target_env = "msvc"))'.dependencies]
all_asserts = "2.3"
nvim-oxi = { path = "..", features = ["test"] }
