[package]
name = "nvim-oxi-api"
description = "Rust bindings to Neovim's C API for nvim-oxi"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
neovim-0-10 = []
neovim-0-11 = ["neovim-0-10"]
neovim-nightly = ["neovim-0-11"]
mlua = ["dep:mlua"]

[dependencies]
luajit = { workspace = true }
macros = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = { workspace = true }
types = { workspace = true, features = ["serde"] }

mlua = { workspace = true, optional = true }

[lints]
workspace = true
