[package]
name = "libuv-bindings"
version = "0.2.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
description = "Minimal Rust bindings to libuv"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"

[dependencies]
luajit-bindings = { version = "0.2.0", path = "../luajit-bindings" }

libuv-sys2 = "1.44.2"
once_cell = "1.15"
thiserror = "1.0"
