[package]
name = "nvim-oxi-libuv"
description = "Rust bindings to libuv for nvim-oxi"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
luajit = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
