[package]
name = "nvim-oxi-libuv"
description = "Rust bindings to libuv for nvim-oxi"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
luajit = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
