[package]
name = "nvim-oxi-libuv"
description = "Rust bindings to libuv for nvim-oxi"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[features]
oximlua = ["dep:mlua", "dep:oximlua"]

[dependencies]
luajit = { workspace = true }
thiserror = { workspace = true }

mlua = { workspace = true, optional = true }
oximlua = { workspace = true, optional = true }

[lints]
workspace = true
