[package]
name = "nvim-oxi-luajit"
description = "Rust bindings to LuaJIT for nvim-oxi"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
once_cell = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
