[package]
name = "nvim-api"
version = "0.2.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
description = "Neovim API bindings"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"

[features]
neovim-0-8 = []
neovim-0-9 = []
neovim-nightly = []

[dependencies]
luajit-bindings = { version = "0.2.0", path = "../luajit-bindings" }
nvim-types = { version = "0.2.0", path = "../nvim-types", features = ["serde"] }

derive_builder = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0"
