[package]
name = "nvim-oxi"
version = "0.2.2"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
rust-version = "1.62"
description = "Rust bindings to all things Neovim."
documentation = "https://docs.rs/nvim_oxi"
readme = "../../README.md"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"
keywords = ["bindings", "neovim", "nvim"]

[package.metadata.docs.rs]
features = ["neovim-0-8", "libuv", "mlua", "test"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
neovim-0-8 = ["nvim-api/neovim-0-8"]
neovim-0-9 = ["nvim-api/neovim-0-9"]
neovim-nightly = ["nvim-api/neovim-nightly"]

diagnostic = ["nvim-diagnostic"]
libuv = ["libuv-bindings"]
mlua = ["dep:mlua"]
test = ["oxi-macros/test", "dep:miniserde"]

[dependencies]
libuv-bindings = { version = "0.2.0", path = "../libuv-bindings", optional = true }
luajit-bindings = { version = "0.2.0", path = "../luajit-bindings" }
nvim-diagnostic = { version = "0.1.0", path = "../nvim-diagnostic", optional = true }
nvim-api = { version = "0.2.0", path = "../nvim-api" }
nvim-types = { version = "0.2.0", path = "../nvim-types", features = ["serde"] }
oxi-macros = { version = "0.2.0", path = "../oxi-macros", features = ["module"] }

mlua = { version = "0.8", optional = true }
thiserror = "1.0"
miniserde = { version = "0.1", optional = true }

[dev-dependencies]
mlua = { version = "0.8", features = ["luajit", "module", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "api"
path = "../../examples/api.rs"
crate-type = ["cdylib"]

[[example]]
name = "calc"
path = "../../examples/calc.rs"
crate-type = ["cdylib"]

[[example]]
name = "libuv"
path = "../../examples/libuv.rs"
crate-type = ["cdylib"]
required-features = ["libuv"]

[[example]]
name = "mechanic"
path = "../../examples/mechanic.rs"
crate-type = ["cdylib"]

[[example]]
name = "mlua"
path = "../../examples/mlua.rs"
crate-type = ["cdylib"]
required-features = ["mlua"]
