[package]
name = "nvim-oxi"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
features = ["neovim-0-9", "libuv", "mlua", "test"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
neovim-0-8 = ["oxi-api/neovim-0-8"]
neovim-0-9 = ["oxi-api/neovim-0-9"]
neovim-nightly = ["oxi-api/neovim-nightly"]

# diagnostic = ["oxi-diagnostic"]
libuv = ["oxi-libuv"]
mlua = ["dep:mlua"]
test = ["oxi-macros/test", "miniserde"]

[dependencies]
oxi-api = { workspace = true }
# oxi-diagnostic = { workspace = true }
oxi-libuv = { version = "0.2.0", path = "../oxi-libuv", optional = true }
oxi-luajit = { workspace = true }
oxi-macros = { workspace = true }
oxi-types = { workspace = true }

miniserde = { version = "0.1", optional = true }
mlua = { version = "0.8", features = ["luajit"], optional = true }
thiserror = "1.0"

[dev-dependencies]
mlua = { version = "0.8", features = ["luajit", "module", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "api"
path = "../../examples/api.rs"
crate-type = ["cdylib"]

[[example]]
name = "calc"
path = "../../examples/calc.rs"
crate-type = ["cdylib"]

[[example]]
name = "libuv"
path = "../../examples/libuv.rs"
crate-type = ["cdylib"]
required-features = ["libuv"]

[[example]]
name = "mechanic"
path = "../../examples/mechanic.rs"
crate-type = ["cdylib"]

[[example]]
name = "mlua"
path = "../../examples/mlua.rs"
crate-type = ["cdylib"]
required-features = ["mlua"]
