[package]
name = "nvim-types"
version = "0.1.1"
authors = [
  "Steve Loveless <steve.loveless@gmail.com>",
  "Riccardo Mazzarini <riccardo.mazzarini@pm.me>",
]
edition = "2021"
description = "Rust bindings to the Neovim C types."
documentation = "https://docs.rs/nvim_types"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"

[features]
nightly = []

[dependencies]
luajit-bindings = { version = "0.1", path = "../luajit-bindings" }

serde = { version = "1.0", optional = true }
thiserror = "1.0"
