[package]
name = "nvim-types"
version = "0.2.0"
authors = [
  "Steve Loveless <steve.loveless@gmail.com>",
  "Riccardo Mazzarini <riccardo.mazzarini@pm.me>",
]
edition = "2021"
description = "Rust bindings to the Neovim C types."
documentation = "https://docs.rs/nvim_types"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"

[features]
neovim-0-7 = []
neovim-0-8 = []
neovim-nightly = []
serde = ["dep:serde"]

[dependencies]
libc = "0.2"
luajit-bindings = { version = "0.2.0", path = "../luajit-bindings" }
serde = { version = "1.0", optional = true }
thiserror = "1.0"
