[package]
name = "oxi-diagnostic"
description = "Rust bindings to Neovim's diagnostic module for nvim-oxi"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
oxi-api = { workspace = true }
oxi-luajit = { workspace = true }
