[package]
name = "oxi-libuv"
description = "Rust bindings to libuv for nvim-oxi"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
oxi-luajit = { workspace = true }

libuv-sys2 = "1.44"
once_cell = "1.17"
thiserror = "1.0"
