[package]
name = "oxi-libuv"
description = "Rust bindings to libuv for nvim-oxi"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[features]
use-1-44 = ["libuv-sys2-1-44"]
use-1-46 = ["libuv-sys2-1-46"]

[dependencies]
oxi-luajit = { workspace = true }

libuv-sys2-1-44 = { package = "libuv-sys2", version = "1.44.2", optional = true }
libuv-sys2-1-46 = { package = "libuv-sys2", version = "1.46.0", optional = true }
once_cell = "1.17"
thiserror = "1.0"
