[package]
name = "oxi-macros"
version = "0.2.0"
edition = "2021"
description = "Proc macros for the nvim-oxi project"
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"

[lib]
proc-macro = true

[features]
module = []
test = []

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
