[package]
name = "oxi-macros"
description = "Proc macros for nvim-oxi"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
module = []
test = []

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
