[package]
name = "oxi-test"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"
description = "Proc macro for the `nvim-oxi` crate."
repository = "https://github.com/noib3/nvim-oxi"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
