[package]
name = "oxi-types"
description = "Rust bindings to types used by Neovim's C API"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
oxi-luajit = { workspace = true }

libc = "0.2"
serde = { version = "1.0", optional = true }
thiserror = "1.0"
