[package]
name = "nvim-oxi-types"
description = "Rust bindings to types used by Neovim's C API"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
libc = "0.2"
luajit = { workspace = true }
once_cell = { workspace = true }
serde = { version = "1.0", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
