[package]
name = "async-apples"
version = "0.1.0"
authors = ["Riccardo Mazzarini <riccardo.mazzarini@pm.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = { version = "1.12", features = ["unstable"] }
futures-lite = "1.12"
nvim-oxi = { path = "../../nvim-oxi" }
rand = "0.8"
